<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cor_input"
        android:gravity="top|bottom"
        android:orientation="vertical"
        android:padding="@dimen/tamanho_texto">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cadastroParte2NomeId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/tamanho_texto"
                android:text="@string/texto_nome_jogador"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/tamanho_texto2" />

            <TextView
                android:id="@+id/cadastroParte2ApelidoId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/tamanho_texto"
                android:text="@string/texto_apelido"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/tamanho_texto2" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/tamanho_texto"
            android:text="@string/texto_subtitulo1"
            android:textColor="@android:color/background_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cadastroCriatura1Id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texto_criatura1"
                    android:textColor="@android:color/background_dark" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texto_botao_selecionar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cadastroCriatura2Id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texto_criatura2"
                    android:textColor="@android:color/background_dark" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texto_botao_selecionar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cadastroCriatura3Id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texto_criatura3"
                    android:textColor="@android:color/background_dark" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texto_botao_selecionar" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/tamanho_texto"
            android:text="@string/texto_escolha_itens"
            android:textColor="@android:color/background_dark" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:columnCount="4">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_item1"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_item2"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_item3"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_item4"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_item5"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBox14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBox15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </GridLayout>

        <Button
            android:id="@+id/botaoFinalizaCadastroId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/texto_avancar" />

    </LinearLayout>

</ScrollView>